Mon Nov 26 14:01:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Echo back the unsupported 'I\r' and 'C\r'
   commands in the 'phoenix' subdriver.

Mon Nov 26 13:45:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Fixed copy-paste error in this driver that
   dates back from the conversion to the new serial I/O functions a
   couple of years back.

Mon Nov 26 10:02:26 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Read the response per byte, so that where
   a timeout occurs.

Mon Nov 26 08:58:25 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Add new 'phoenix' subdriver, since it seems
   to drift away from what is needed by the 'agiler' subdriver.

Sun Nov 25 19:48:22 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Add debugging code to help diagnose driver
   problems.

Sun Nov 25 18:59:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: Fix counting detection attempts. Don't flush
   input- and output buffers before sending any command (too verbose
   for the USB subdrivers).
 - drivers/megatec_usb.c: Padding to 8 characters for commands send
   through set_data_agiler(). Apparently, some devices need that.

Sun Nov 25 11:44:58 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c: Limit detection of UPS to minimum required number
   of successful attempts. Flush input- and output buffers before sending
   any command.

Sun Nov 25 10:53:38 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c, scripts/hal/20-ups-nut-device.fdi: Added
   Mustek Powermust as supported through 'megatec_usb' driver.

Mon Nov  5 20:21:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/nitram.c: Added experimental flag to this driver because it
   lacks support to shutdown the UPS.

Sun Nov  4 20:08:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
